Get logo appearing on FAQ page. Remove link to jobs.

--- a/webroot/faq/index.html
+++ b/webroot/faq/index.html
@@ -25,12 +25,7 @@
             <div class="box">
               <div class="row">
                 <div class="col-lg-2 col-md-6 col-sm-6 col-xs-12">
-                  <div class="box"><img src="images/chia-logo.png" class="logo" /></div>
-                </div>
-                <div class="col-lg-10 col-md-6 col-sm-6 col-xs-12">
-                  <div class="box header-button">
-                    <a href="#jobs">we're hiring!</a>
-                  </div>
+                  <div class="box"><img src="../images/chia-logo.png" class="logo" /></div>
                 </div>
               </div>
             </div>
