Site Preview for eg Telegram
Shows a little preview of what Chia is in Clients like Telegram: https://puu.sh/yKWtM/d06c23e2c9.png

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -16,6 +16,11 @@
     <meta name="apple-mobile-web-app-title" content="Chia">
     <meta name="application-name" content="Chia">
     <meta name="theme-color" content="#ffffff">
+    <meta name="description" content="We're building a blockchain based on proofs of space and time to make a cryptocurrency which is less wasteful, more decentralized, and more secure." />
+    <meta property="og:title" content="Chia: Green money for a digital world" />
+    <meta property="og:url" content="https://chia.network/" />
+    <meta property="og:image" content="https://chia.network/android-chrome-384x384.png" />
+    <meta property="og:description" content="We're building a blockchain based on proofs of space and time to make a cryptocurrency which is less wasteful, more decentralized, and more secure." />
   </head>
   <body class="layout">
     <div class="page js-page">
