stub in the full japanese translations

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -110,7 +110,7 @@
                     </div>
                   </div>
                   <div class="col-lg-4 col-lg-offset-2">
-                    <div class="box" style="text-align:center;"><h2>Get Chia</h2>
+                    <div class="box" style="text-align:center;"><h2 data-l10n-id="get-chia">Get Chia</h2>
                       <p>
                         <img src="images/leaf.png" class="white-leaf" style="max-width:150px;" />
                       </p>
