WIP German translation

--- a/webroot/languages/de/index.html
+++ b/webroot/languages/de/index.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="col-lg-10 col-md-6 col-sm-6 col-xs-12">
                   <div class="box header-button">
-                    <a href="#jobs">we're hiring!</a>
+                    <a href="#jobs">Wir stellen ein!</a>
                   </div>
                 </div>
               </div>
@@ -42,11 +42,11 @@
       <div class="wrap container-fluid" style="padding-bottom:0;padding-top:10px;">
         <div class="row">
           <div class="col-lg-4">
-            <div class="box"><h1>green money for<br />a digital world</h1></div>
+            <div class="box"><h1>Grünes Geld für<br />eine digitale Welt</h1></div>
           </div>
           <div class="col-lg-7 col-lg-offset-1">
             <div class="box"><p><br />
-              We're building a blockchain based on proofs of space and time to make a cryptocurrency which is less wasteful, more decentralized, and more secure.
+              Wir bauen eine Blockchain, die auf Proof of Space und Proof of Time basiert, um eine besser Kryptowährung zu schaffen, die besser für die Umwelt, mehr dezentralisiert und sicherer ist.
             </p>
             </div>
           </div>
@@ -78,9 +78,9 @@
           <div class="col-lg-12">
             <div class="box centered">
               <div class="info-box">
-                <h4>Learn more</h4>
+                <h4>Erfahren Sie mehr</h4>
                 <p>
-                  A <a href="https://www.facebook.com/BerkeleyBlockchain/videos/2006069823011271/">recent talk</a> (starts about 20:00) with <a href="https://drive.google.com/file/d/0ByHuc4xBso7TaEpWSlozWlpxcVk/view">slides</a>. An <a href="https://www.youtube.com/watch?v=aYG0NxoG7yw">older talk</a> with <a href="https://cyber.stanford.edu/sites/default/files/bramcohen.pdf">slides</a>. <br />A very <a href="https://eprint.iacr.org/2017/893">technical paper</a> on proofs of space.
+                  Ein <a href="https://www.facebook.com/BerkeleyBlockchain/videos/2006069823011271/">jüngstes Gespräch</a> (in Englisch) (fängt bei ungefähr 20:00 an) mit <a href="https://drive.google.com/file/d/0ByHuc4xBso7TaEpWSlozWlpxcVk/view">Folien</a>. Ein <a href="https://www.youtube.com/watch?v=aYG0NxoG7yw">altes Gespräch</a> (in Englisch) mit <a href="https://cyber.stanford.edu/sites/default/files/bramcohen.pdf">Folien</a>. <br />Ein sehr <a href="https://eprint.iacr.org/2017/893">technisches Dokument</a> über Proofs of Space.
                 </p>
               </div>
             </div>
@@ -96,10 +96,10 @@
                 <div class="row">
                   <div class="col-lg-6">
                     <div class="box"><p><br />
-                      We plan to sell Chia to the public next year to allow everyone to invest in a better digital money.
+                      Wir haben vor Chia nächstes Jahr zum Verkauf anzubieten, damit jeder in eine bessere digitale Währung investieren kann.
                       </p>
                       <p>
-                      Subscribe to the <a href="https://groups.google.com/a/chia.network/forum/#!forum/announce">announcements list</a> to learn more.
+                      Abonniere die <a href="https://groups.google.com/a/chia.network/forum/#!forum/announce">Ankündigungsliste</a>, um mehr zu erfahren.
                       </p>
                     </div>
                   </div>
@@ -127,17 +127,17 @@
                     <div class="box"><h3>Community</h3></div>
                   </div>
                   <div class="col-lg-6">
-                    <div class="box"><br />Join our Keybase group to participate in discussion.
+                    <div class="box"><br />Besuche unsere Keybase Gruppe, um mitzudiskutieren.
                       <ol class="info-box">
                         <li>
-                          Install and setup <a href="https://keybase.io/download">Keybase</a>
+                          Installiere <a href="https://keybase.io/download">Keybase</a>
                         </li>
                         <li>
-                          Run this in your terminal: <br /><code>keybase team request-access chia_network.public</code>
+                          Führe folgendes in deinem Terminal aus: <br /><code>keybase team request-access chia_network.public</code>
                         </li>
                       </ol>
                       <p>
-                        Join our <a href="https://groups.google.com/a/chia.network/forum/#!forum/announce">announcements list</a> to keep updated.
+                        Besuche unsere <a href="https://groups.google.com/a/chia.network/forum/#!forum/announce">Ankündigungsliste</a> um auf dem Laufenden zu bleiben.
                       </p>
                     </div>
                   </div>
