Tweak to be more like master.

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
   <head>
     <meta charset="utf-8">
@@ -77,15 +77,15 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="box centered">
-                <div class="info-box">
-                    <h4>Learn more</h4>
-                    <p>
-                        A <a href="https://www.facebook.com/BerkeleyBlockchain/videos/2006069823011271/">recent talk</a> (starts about 20:00) with <a href="https://drive.google.com/file/d/0ByHuc4xBso7TaEpWSlozWlpxcVk/view">slides</a>. An <a href="https://www.youtube.com/watch?v=aYG0NxoG7yw">older talk</a> with <a href="https://cyber.stanford.edu/sites/default/files/bramcohen.pdf">slides</a>. <br />A very <a href="https://eprint.iacr.org/2017/893">technical paper</a> on proofs of space.
-                    </p>
-                    <p>
-                        <a href="faq/">Frequently Asked Questions</a>
-                    </p>
-                </div>
+              <div class="info-box">
+                <h4>Learn more</h4>
+                <p>
+                  A <a href="https://www.facebook.com/BerkeleyBlockchain/videos/2006069823011271/">recent talk</a> (starts about 20:00) with <a href="https://drive.google.com/file/d/0ByHuc4xBso7TaEpWSlozWlpxcVk/view">slides</a>. An <a href="https://www.youtube.com/watch?v=aYG0NxoG7yw">older talk</a> with <a href="https://cyber.stanford.edu/sites/default/files/bramcohen.pdf">slides</a>. <br />A very <a href="https://eprint.iacr.org/2017/893">technical paper</a> on proofs of space.
+                </p>
+                <p>
+                  <a href="faq/">Frequently Asked Questions</a>
+                </p>
+              </div>
             </div>
           </div>
         </div>
