translate Frequently Asked Questions

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -95,7 +95,7 @@
                   A <a href="https://www.facebook.com/BerkeleyBlockchain/videos/2006069823011271/">recent talk</a> (starts about 20:00) with <a href="https://drive.google.com/file/d/0ByHuc4xBso7TaEpWSlozWlpxcVk/view">slides</a>. An <a href="https://www.youtube.com/watch?v=aYG0NxoG7yw">older talk</a> with <a href="https://cyber.stanford.edu/sites/default/files/bramcohen.pdf">slides</a>. <br />A very <a href="https://eprint.iacr.org/2017/893">technical paper</a> on proofs of space.
                 </p>
                 <p>
-                  <a href="faq/">Frequently Asked Questions</a>
+                  <a data-l10n-id="faq" href="faq/">Frequently Asked Questions</a>
                 </p>
               </div>
             </div>
