--- a/webroot/index.html
+++ b/webroot/index.html
@@ -81,14 +81,17 @@
       <div class="wrap container-fluid" style="padding-bottom:60px;padding-top:10px;">
         <div class="row">
           <div class="col-lg-12">
-            <div class="box centered">
+            <div class="box">
               <div class="info-box">
                 <h4>Learn more</h4>
                 <p>
-                  A <a href="https://www.facebook.com/BerkeleyBlockchain/videos/2006069823011271/">recent talk</a> (starts about 20:00) with <a href="https://drive.google.com/file/d/0ByHuc4xBso7TaEpWSlozWlpxcVk/view">slides</a>. An <a href="https://www.youtube.com/watch?v=aYG0NxoG7yw">older talk</a> with <a href="https://cyber.stanford.edu/sites/default/files/bramcohen.pdf">slides</a>. <br />A very <a href="https://eprint.iacr.org/2017/893">technical paper</a> on proofs of space.
-                </p>
-                <p>
-                  <a href="faq/">Frequently Asked Questions</a>
+                  <ul>
+                  <li>A <a href="https://www.facebook.com/BerkeleyBlockchain/videos/2006069823011271/">recent talk</a> (starts about 20:00) with <a href="https://drive.google.com/file/d/0ByHuc4xBso7TaEpWSlozWlpxcVk/view">slides</a>.</li>
+                  <li>An <a href="https://www.youtube.com/watch?v=aYG0NxoG7yw">older talk</a> with <a href="https://cyber.stanford.edu/sites/default/files/bramcohen.pdf">slides</a>.</li>
+                  <li>A very <a href="https://eprint.iacr.org/2017/893">technical paper</a> on proofs of space.</li>
+                  <li>Follow the latest articles in the <a href="/news">news</a> section.</li>
+                  <li><a href="faq/">Frequently Asked Questions (FAQ)</a></li>
+                </ul>
                 </p>
               </div>
             </div>
