--- a/webroot/index.html
+++ b/webroot/index.html
@@ -16,11 +16,11 @@
     <meta name="apple-mobile-web-app-title" content="Chia">
     <meta name="application-name" content="Chia">
     <meta name="theme-color" content="#ffffff">
-    <meta name="description" content="We're building a blockchain based on proofs of space and time to make a cryptocurrency which is less wasteful, more decentralized, and more secure." />
-    <meta property="og:title" content="Chia: Green money for a digital world" />
+    <meta name="description" content="Gradimo blockchain na temelju Proof of Space i Proof of Time algoritmu kako bi smo napravili kriptovalutu koja manje troši, koja je više decentralizovana i više sigurna." />
+    <meta property="og:title" content="Chia: Ekološki novac za digitalni svijet!" />
     <meta property="og:url" content="https://chia.network/" />
     <meta property="og:image" content="https://chia.network/android-chrome-384x384.png" />
-    <meta property="og:description" content="We're building a blockchain based on proofs of space and time to make a cryptocurrency which is less wasteful, more decentralized, and more secure." />
+    <meta property="og:description" content="Gradimo blockchain na temelju Proof of Space i Proof of Time algoritmu kako bi smo napravili kriptovalutu koja manje troši, koja je više decentralizovana i više sigurna." />
   </head>
   <body class="layout">
     <div class="page js-page">
@@ -31,11 +31,11 @@
             <div class="box">
               <div class="row">
                 <div class="col-lg-2 col-md-6 col-sm-6 col-xs-12">
-                  <div class="box"><img src="images/chia-logo.png" class="logo" /></div>
+                  <div class="box"><img src="images/chia-logo.svg" class="logo" /></div>
                 </div>
                 <div class="col-lg-10 col-md-6 col-sm-6 col-xs-12">
                   <div class="box header-button">
-                    <a href="#jobs">we're hiring!</a>
+                    <a href="#jobs">Mi zapošljavamo!</a>
                   </div>
                 </div>
               </div>
@@ -47,11 +47,11 @@
       <div class="wrap container-fluid" style="padding-bottom:0;padding-top:10px;">
         <div class="row">
           <div class="col-lg-4">
-            <div class="box"><h1>green money for<br />a digital world</h1></div>
+            <div class="box"><h1>Ekološki novac za<br />digitalni svijet</h1></div>
           </div>
           <div class="col-lg-7 col-lg-offset-1">
             <div class="box"><p><br />
-              We're building a blockchain based on proofs of space and time to make a cryptocurrency which is less wasteful, more decentralized, and more secure.
+              Gradimo blockchain na temelju Proof of Space i Proof of Time algoritma kako bismo napravili kriptovalutu koja manje troši, koja je više decentralizovana i više sigurna.
             </p>
             </div>
           </div>
@@ -62,17 +62,17 @@
         <div class="row">
           <div class="col-lg-4">
             <div class="box centered">
-              <img src="images/earth.png" class="med-icon" />
+              <img src="images/earth.svg" class="med-icon" />
             </div>
           </div>
           <div class="col-lg-4">
             <div class="box centered">
-              <img src="images/network.png" class="med-icon" />
+              <img src="images/network.svg" class="med-icon" />
             </div>
           </div>
           <div class="col-lg-4">
             <div class="box centered">
-              <img src="images/lock.png" class="med-icon" />
+              <img src="images/lock.svg" class="med-icon" />
             </div>
           </div>
         </div>
@@ -83,12 +83,12 @@
           <div class="col-lg-12">
             <div class="box centered">
               <div class="info-box">
-                <h4>Learn more</h4>
+                <h4>Pogledaj više</h4>
                 <p>
-                  A <a href="https://www.facebook.com/BerkeleyBlockchain/videos/2006069823011271/">recent talk</a> (starts about 20:00) with <a href="https://drive.google.com/file/d/0ByHuc4xBso7TaEpWSlozWlpxcVk/view">slides</a>. An <a href="https://www.youtube.com/watch?v=aYG0NxoG7yw">older talk</a> with <a href="https://cyber.stanford.edu/sites/default/files/bramcohen.pdf">slides</a>. <br />A very <a href="https://eprint.iacr.org/2017/893">technical paper</a> on proofs of space.
+                <a href="https://www.facebook.com/BerkeleyBlockchain/videos/2006069823011271/">Nedavni razgovor</a> sa <a href="https://drive.google.com/file/d/0ByHuc4xBso7TaEpWSlozWlpxcVk/view">ovim slajdovima</a>. <a href="https://www.youtube.com/watch?v=aYG0NxoG7yw">Stariji razgovor</a> sa <a href="https://cyber.stanford.edu/sites/default/files/bramcohen.pdf">ovim slajdovima</a>. <br /> <a href="https://eprint.iacr.org/2017/893">Rad</a> na temu "Proof of Space".
                 </p>
                 <p>
-                  <a href="faq/">Frequently Asked Questions</a>
+                  <a href="faq/">Česta pitanja</a>
                 </p>
               </div>
             </div>
@@ -104,17 +104,17 @@
                 <div class="row">
                   <div class="col-lg-6">
                     <div class="box"><p><br />
-                      We plan to sell Chia to the public next year to allow everyone to invest in a better digital money.
+					  Chia valutu planiramo prodavati već sljedeće godine kako bismo svima omogućili da ulažu u bolju digitalnu valutu.
                       </p>
                       <p>
-                      Subscribe to the <a href="https://groups.google.com/a/chia.network/forum/#!forum/announce">announcements list</a> to learn more.
+                      <a href="https://groups.google.com/a/chia.network/forum/#!forum/announce">Pridružite se</a> da saznate više.
                       </p>
                     </div>
                   </div>
                   <div class="col-lg-4 col-lg-offset-2">
-                    <div class="box" style="text-align:center;"><h2>Get Chia</h2>
+                    <div class="box" style="text-align:center;"><h2>Kupi valutu</h2>
                       <p>
-                        <img src="images/leaf.png" class="white-leaf" style="max-width:150px;" />
+                        <img src="images/leaf.svg" class="white-leaf" style="max-width:150px;" />
                       </p>
                     </div>
                   </div>
@@ -132,20 +132,20 @@
               <div class="wrap container-fluid">
                 <div class="row">
                   <div class="col-lg-6">
-                    <div class="box"><h3>Community</h3></div>
+                    <div class="box"><h3>Zajednica</h3></div>
                   </div>
                   <div class="col-lg-6">
-                    <div class="box"><br />Join our Keybase group to participate in discussion.
+                    <div class="box"><br />Pridružite se grupi da biste učestvovali u raspravi.
                       <ol class="info-box">
                         <li>
-                          Install and setup <a href="https://keybase.io/download">Keybase</a>
+                          Preuzmite i instalirajte: <a href="https://keybase.io/download">Keybase</a>
                         </li>
                         <li>
-                          Run this in your terminal: <br /><code>keybase team request-access chia_network.public</code>
+                          Zatim pokrenite u terminalu: <br /><code>keybase team request-access chia_network.public</code>
                         </li>
                       </ol>
                       <p>
-                        Join our <a href="https://groups.google.com/a/chia.network/forum/#!forum/announce">announcements list</a> to keep updated.
+                        <a href="https://groups.google.com/a/chia.network/forum/#!forum/announce">Pridružite se</a> za obavijesti.
                       </p>
                     </div>
                   </div>
@@ -164,12 +164,11 @@
               <div class="wrap container-fluid">
                 <div class="row">
                   <div class="col-lg-12">
-                    <div class="box"><h2>Jobs</h2>
+                    <div class="box"><h2>Posao</h2>
                     <p>
-                      We're looking to hire several technically gifted programmers to work with our team of cryptographers on building our protocol. Must have strong algorithms skills. Cryptography experience is a plus but not required. Remote is okay but being in San Francisco is a plus. To apply please do several HackerRank challenges and send a link to your HackerRank profile plus your resume to <a href="mailto:jobs@chia.network">jobs@chia.network</a>.</p>
-
+                     Tražimo nekoliko talentovanih programera koji bi zajedno sa našim timom radili na izgradnji protokola. Programer mora imati dosta iskustva sa algoritmima. Programer ima prioritet ako je iskusan sa kriptografijom ili ako je iz San Franciska. Za prijavu molimo Vas da uradite nekoliko HackerRank izazova i zatim pošaljete link vašeg profila na <a href="mailto:jobs@chia.network">jobs@chia.network</a>.</p>
                       <p>
-                        We're hiring an Assistant to the Founders (Executive Assistant/Office manager). Location is in San Francisco. To apply please send your resume to <a href="mailto:jobs@chia.network">jobs@chia.network</a>.
+                      Tražimo pomoćnika osnivaču (Izvršni pomoćnik / Direktor kancelarije). Pomoćnik mora biti iz San Franciska. Možete se prijaviti na  <a href="mailto:jobs@chia.network">jobs@chia.network</a>.
                     </p></div>
                   </div>
                 </div>
@@ -187,16 +186,16 @@
                 <div class="row">
                   <div class="col-lg-4">
                     <div class="box">
-                      <h3>Financial Institutions</h3>
+                      <h3>Finansijske institucije</h3>
                     </div>
                   </div>
                   <div class="col-lg-8">
                     <div class="box">
                       <p>
-                      Digital Money is being increasingly demanded by individual and institutional investors. Chia can help traditional financial institutions meet that demand.
+                     Digitalni novac sve više zahtijevaju pojedini i institucionalni ulagači. Chia može pomoći tradicionalnim finansijskim institucijama da zadovolje tu potražnju.
                       </p>
                       <p>
-                        <a href="mailto:hello@chia.network">Contact us</a> to find out more.
+                        <a href="mailto:hello@chia.network">Kontaktirajte nas</a> da saznate više.
                       </p>
                     </div>
                   </div>
@@ -210,9 +209,9 @@
       <div class="wrap container-fluid">
         <div class="row">
           <div class="col-lg-12">
-            <div class="box"><h3>About Us</h3>
+            <div class="box"><h3>O nama</h3>
             <p>
-              Chia Network is a San Francisco-based company focused on improving crypto-currency infrastructure. Our CEO, Bram Cohen, famously invented BitTorrent: the first modern decentralized network protocol and one of the inspirations for the Bitcoin protocol. Our founding team has experience across the crypto-currency and finance sectors, coming from Tradehill, CryptoCorp and Lightning Labs.
+              Chia Network je kompanija u San Francisku koja je fokusirana na poboljšanje kripto valutne infrastrukture. Naš direktor, Bram Cohen, je tvorac BitTorrent-a: Prvog modernog decentralizovanog mrežnog protokola koji je i jedna od inspiracija za Bitcoin protokol. Naš tim ima veliko iskustvo u kripto valutnom i finansijskom sektor. 
             </p></div>
           </div>
         </div>
@@ -227,8 +226,8 @@
                   <div class="col-lg-12">
                     <div class="box">
                       <div class="grey-fade">
-                        <img src="images/leaf.png" style="max-width:100px;" />
-                        <h2>green money for a digital world</h2><br />
+                        <img src="images/leaf.svg" style="max-width:100px;" />
+                        <h2>Ekološki novac za digitalni svijet</h2><br />
                         <p>
                           <a href="mailto:hello@chia.network">hello@chia.network</a><br />
                           (650) 924-2785<br />
