--- a/webroot/index.html
+++ b/webroot/index.html
@@ -30,14 +30,20 @@
           <div class="col-lg-12 wrap">
             <div class="box">
               <div class="row">
+			  
                 <div class="col-lg-2 col-md-6 col-sm-6 col-xs-12">
                   <div class="box"><img src="images/chia-logo.svg" class="logo" /></div>
                 </div>
+				
                 <div class="col-lg-10 col-md-6 col-sm-6 col-xs-12">
                   <div class="box header-button">
-                    <a href="#jobs">Mi zapošljavamo!</a>
+					<a href="#community">Zajednica</a>
+					<a href="#jobs">Posao!</a>
+					<a href="news/index.html">Novosti</a>
+					<a href="#about">O nama</a>
                   </div>
                 </div>
+
               </div>
             </div>
           </div>
@@ -125,6 +131,7 @@
         </div>
       </div>
 
+	  <a name="community"></a>
       <div class="hero community">
         <div class="row">
           <div class="col-lg-12 wrap">
@@ -206,6 +213,7 @@
         </div>
       </div>
 
+	  <a name="about"></a>
       <div class="wrap container-fluid">
         <div class="row">
           <div class="col-lg-12">
