--- a/webroot/index.html
+++ b/webroot/index.html
@@ -16,11 +16,11 @@
     <meta name="apple-mobile-web-app-title" content="Chia">
     <meta name="application-name" content="Chia">
     <meta name="theme-color" content="#ffffff">
-    <meta name="description" content="Gradimo blockchain na temelju Proof of Space i Proof of Time algoritmu kako bi smo napravili kriptovalutu koja manje troši, koja je više decentralizovana i više sigurna." />
-    <meta property="og:title" content="Chia: Ekološki novac za digitalni svijet!" />
+    <meta name="description" content="We're building a blockchain based on proofs of space and time to make a cryptocurrency which is less wasteful, more decentralized, and more secure." />
+    <meta property="og:title" content="Chia: Green money for a digital world" />
     <meta property="og:url" content="https://chia.network/" />
     <meta property="og:image" content="https://chia.network/android-chrome-384x384.png" />
-    <meta property="og:description" content="Gradimo blockchain na temelju Proof of Space i Proof of Time algoritmu kako bi smo napravili kriptovalutu koja manje troši, koja je više decentralizovana i više sigurna." />
+    <meta property="og:description" content="We're building a blockchain based on proofs of space and time to make a cryptocurrency which is less wasteful, more decentralized, and more secure." />
   </head>
   <body class="layout">
     <div class="page js-page">
@@ -37,10 +37,10 @@
 				
                 <div class="col-lg-10 col-md-6 col-sm-6 col-xs-12">
                   <div class="box header-button">
-					<a href="#community">Zajednica</a>
-					<a href="#jobs">Posao!</a>
-					<a href="news/index.html">Novosti</a>
-					<a href="#about">O nama</a>
+					<a href="#community">Community</a>
+					<a href="#jobs">We're hiring!</a>
+					<a href="news/index.html">News</a>
+					<a href="#about">About us</a>
                   </div>
                 </div>
 
@@ -53,12 +53,12 @@
       <div class="wrap container-fluid" style="padding-bottom:0;padding-top:10px;">
         <div class="row">
           <div class="col-lg-4">
-            <div class="box"><h1>Ekološki novac za<br />digitalni svijet</h1></div>
+            <div class="box"><h1>green money for<br />a digital world</h1></div>
           </div>
           <div class="col-lg-7 col-lg-offset-1">
             <div class="box"><p><br />
-              Gradimo blockchain na temelju Proof of Space i Proof of Time algoritma kako bismo napravili kriptovalutu koja manje troši, koja je više decentralizovana i više sigurna.
-            </p>
+             We're building a blockchain based on proofs of space and time to make a cryptocurrency which is less wasteful, more decentralized, and more secure.
+			 </p>
             </div>
           </div>
         </div>
@@ -89,12 +89,12 @@
           <div class="col-lg-12">
             <div class="box centered">
               <div class="info-box">
-                <h4>Pogledaj više</h4>
+                 <h4>Learn more</h4>
                 <p>
-                <a href="https://www.facebook.com/BerkeleyBlockchain/videos/2006069823011271/">Nedavni razgovor</a> sa <a href="https://drive.google.com/file/d/0ByHuc4xBso7TaEpWSlozWlpxcVk/view">ovim slajdovima</a>. <a href="https://www.youtube.com/watch?v=aYG0NxoG7yw">Stariji razgovor</a> sa <a href="https://cyber.stanford.edu/sites/default/files/bramcohen.pdf">ovim slajdovima</a>. <br /> <a href="https://eprint.iacr.org/2017/893">Rad</a> na temu "Proof of Space".
+                  A <a href="https://www.facebook.com/BerkeleyBlockchain/videos/2006069823011271/">recent talk</a> (starts about 20:00) with <a href="https://drive.google.com/file/d/0ByHuc4xBso7TaEpWSlozWlpxcVk/view">slides</a>. An <a href="https://www.youtube.com/watch?v=aYG0NxoG7yw">older talk</a> with <a href="https://cyber.stanford.edu/sites/default/files/bramcohen.pdf">slides</a>. <br />A very <a href="https://eprint.iacr.org/2017/893">technical paper</a> on proofs of space.
                 </p>
                 <p>
-                  <a href="faq/">Česta pitanja</a>
+                  <a href="faq/">Frequently Asked Questions</a>
                 </p>
               </div>
             </div>
@@ -110,15 +110,15 @@
                 <div class="row">
                   <div class="col-lg-6">
                     <div class="box"><p><br />
-					  Chia valutu planiramo prodavati već sljedeće godine kako bismo svima omogućili da ulažu u bolju digitalnu valutu.
+                      We plan to sell Chia to the public next year to allow everyone to invest in a better digital money.
                       </p>
                       <p>
-                      <a href="https://groups.google.com/a/chia.network/forum/#!forum/announce">Pridružite se</a> da saznate više.
+                      Subscribe to the <a href="https://groups.google.com/a/chia.network/forum/#!forum/announce">announcements list</a> to learn more.
                       </p>
                     </div>
                   </div>
                   <div class="col-lg-4 col-lg-offset-2">
-                    <div class="box" style="text-align:center;"><h2>Kupi valutu</h2>
+                    <div class="box" style="text-align:center;"><h2>Get Chia</h2>
                       <p>
                         <img src="images/leaf.svg" class="white-leaf" style="max-width:150px;" />
                       </p>
@@ -139,20 +139,20 @@
               <div class="wrap container-fluid">
                 <div class="row">
                   <div class="col-lg-6">
-                    <div class="box"><h3>Zajednica</h3></div>
+                    <div class="box"><h3>Community</h3></div>
                   </div>
                   <div class="col-lg-6">
-                    <div class="box"><br />Pridružite se grupi da biste učestvovali u raspravi.
+                    <div class="box"><br />Join our Keybase group to participate in discussion.
                       <ol class="info-box">
                         <li>
-                          Preuzmite i instalirajte: <a href="https://keybase.io/download">Keybase</a>
+                          Install and setup <a href="https://keybase.io/download">Keybase</a>
                         </li>
                         <li>
-                          Zatim pokrenite u terminalu: <br /><code>keybase team request-access chia_network.public</code>
+                          Run this in your terminal: <br /><code>keybase team request-access chia_network.public</code>
                         </li>
                       </ol>
                       <p>
-                        <a href="https://groups.google.com/a/chia.network/forum/#!forum/announce">Pridružite se</a> za obavijesti.
+                        Join our <a href="https://groups.google.com/a/chia.network/forum/#!forum/announce">announcements list</a> to keep updated.
                       </p>
                     </div>
                   </div>
@@ -171,11 +171,12 @@
               <div class="wrap container-fluid">
                 <div class="row">
                   <div class="col-lg-12">
-                    <div class="box"><h2>Posao</h2>
+                     <div class="box"><h2>Jobs</h2>
                     <p>
-                     Tražimo nekoliko talentovanih programera koji bi zajedno sa našim timom radili na izgradnji protokola. Programer mora imati dosta iskustva sa algoritmima. Programer ima prioritet ako je iskusan sa kriptografijom ili ako je iz San Franciska. Za prijavu molimo Vas da uradite nekoliko HackerRank izazova i zatim pošaljete link vašeg profila na <a href="mailto:jobs@chia.network">jobs@chia.network</a>.</p>
+                      We're looking to hire several technically gifted programmers to work with our team of cryptographers on building our protocol. Must have strong algorithms skills. Cryptography experience is a plus but not required. Remote is okay but being in San Francisco is a plus. To apply please do several HackerRank challenges and send a link to your HackerRank profile plus your resume to <a href="mailto:jobs@chia.network">jobs@chia.network</a>.</p>
+
                       <p>
-                      Tražimo pomoćnika osnivaču (Izvršni pomoćnik / Direktor kancelarije). Pomoćnik mora biti iz San Franciska. Možete se prijaviti na  <a href="mailto:jobs@chia.network">jobs@chia.network</a>.
+                        We're hiring an Assistant to the Founders (Executive Assistant/Office manager). Location is in San Francisco. To apply please send your resume to <a href="mailto:jobs@chia.network">jobs@chia.network</a>.
                     </p></div>
                   </div>
                 </div>
@@ -193,16 +194,16 @@
                 <div class="row">
                   <div class="col-lg-4">
                     <div class="box">
-                      <h3>Finansijske institucije</h3>
+                      <h3>Financial Institutions</h3>
                     </div>
                   </div>
                   <div class="col-lg-8">
                     <div class="box">
                       <p>
-                     Digitalni novac sve više zahtijevaju pojedini i institucionalni ulagači. Chia može pomoći tradicionalnim finansijskim institucijama da zadovolje tu potražnju.
+                      Digital Money is being increasingly demanded by individual and institutional investors. Chia can help traditional financial institutions meet that demand.
                       </p>
                       <p>
-                        <a href="mailto:hello@chia.network">Kontaktirajte nas</a> da saznate više.
+                        <a href="mailto:hello@chia.network">Contact us</a> to find out more.
                       </p>
                     </div>
                   </div>
@@ -217,9 +218,9 @@
       <div class="wrap container-fluid">
         <div class="row">
           <div class="col-lg-12">
-            <div class="box"><h3>O nama</h3>
+            <div class="box"><h3>About Us</h3>
             <p>
-              Chia Network je kompanija u San Francisku koja je fokusirana na poboljšanje kripto valutne infrastrukture. Naš direktor, Bram Cohen, je tvorac BitTorrent-a: Prvog modernog decentralizovanog mrežnog protokola koji je i jedna od inspiracija za Bitcoin protokol. Naš tim ima veliko iskustvo u kripto valutnom i finansijskom sektor. 
+              Chia Network is a San Francisco-based company focused on improving crypto-currency infrastructure. Our CEO, Bram Cohen, famously invented BitTorrent: the first modern decentralized network protocol and one of the inspirations for the Bitcoin protocol. Our founding team has experience across the crypto-currency and finance sectors, coming from Tradehill, CryptoCorp and Lightning Labs.
             </p></div>
           </div>
         </div>
@@ -235,7 +236,7 @@
                     <div class="box">
                       <div class="grey-fade">
                         <img src="images/leaf.svg" style="max-width:100px;" />
-                        <h2>Ekološki novac za digitalni svijet</h2><br />
+                        <h2>green money for a digital world</h2><br />
                         <p>
                           <a href="mailto:hello@chia.network">hello@chia.network</a><br />
                           (650) 924-2785<br />
